fix(YB-364): mapstruct 매핑 오류 수정