@@ -1,8 +1,10 @@
 package com.yellobook.domains.inform.mapper;
 
-import com.yellobook.domains.inform.dto.InformRequest;
-import com.yellobook.domains.inform.dto.InformResponse;
-import com.yellobook.domains.inform.dto.MentionDTO;
+import com.yellobook.domains.inform.dto.request.CreateInformRequest;
+import com.yellobook.domains.inform.dto.response.CreateInformResponse;
+import com.yellobook.domains.inform.dto.response.GetInformResponse;
+import com.yellobook.domains.inform.dto.response.GetInformResponse.CommentItem;
+import com.yellobook.domains.inform.dto.response.GetInformResponse.MentionItem;
 import com.yellobook.domains.inform.entity.Inform;
 import com.yellobook.domains.inform.entity.InformComment;
 import com.yellobook.domains.inform.entity.InformMention;
@@ -12,15 +14,14 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface InformMapper {
     @Mapping(source = "request.memo", target = "content")
-    Inform toInform(InformRequest.CreateInformRequestDTO request, Member member, Team team);
+    Inform toInform(CreateInformRequest request, Member member, Team team);
 
     @Mapping(source = "inform.id", target = "informId")
-    InformResponse.CreateInformResponseDTO toCreateInformResponseDTO(Inform inform);
+    CreateInformResponse toCreateInformResponse(Inform inform);
 
     @Mapping(target = "inform", source = "inform")
     @Mapping(target = "member", source = "member")
@@ -30,19 +31,25 @@ public interface InformMapper {
     @Mapping(target = "memo", source = "inform.content")
     @Mapping(target = "view", source = "inform.view")
     @Mapping(target = "date", source = "inform.date")
-    @Mapping(target = "mentioned", source = "mentions")
-    @Mapping(target = "comments", source = "comments")
-    InformResponse.GetInformResponseDTO toGetInformResponseDTO(Inform inform, List<InformComment> comments, List<InformMention> mentions);
+    GetInformResponse toGetInformResponseDTO(Inform inform, List<InformComment> comments, List<Member> members);
 
-    default MentionDTO map(List<InformMention> mentions) {
-        if (mentions == null || mentions.isEmpty()) {
-            return new MentionDTO(List.of());
-        }
+    default List<CommentItem> mapComments(List<InformComment> comments) {
+        return comments.stream()
+                .map(comment -> CommentItem.builder()
+                        .id(comment.getId())
+                        .memberId(comment.getMember().getId())
+                        .content(comment.getContent())
+                        .createdAt(comment.getCreatedAt())
+                        .build())
+                .toList();
+    }
 
-        List<Long> ids = mentions.stream()
-                .map(InformMention::getId)
-                .collect(Collectors.toList());
-
-        return new MentionDTO(ids);
+    default List<MentionItem> mapMentions(List<Member> members) {
+        return members.stream()
+                .map(member -> MentionItem.builder()
+                        .memberId(member.getId())
+                        .memberNickname(member.getNickname()) // Assuming "nickname" is correct
+                        .build())
+                .toList();
     }
 }
